--- a/app/src/main/res/layout/item_daily.xml
+++ b/app/src/main/res/layout/item_daily.xml
@@ -2,44 +2,57 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <android.support.v7.widget.CardView
 
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:foreground="?android:attr/selectableItemBackground"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="8dp"
+
+        android:foreground="?android:attr/selectableItemBackground"
+        android:orientation="vertical">
 
         <RelativeLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             >
+
             <ImageView
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/image_default"
+                android:id="@+id/icon_image"
                 android:layout_width="120dp"
                 android:layout_height="90dp"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:id="@+id/icon_image"/>
+                android:src="@drawable/image_default"/>
 
             <TextView
                 android:id="@+id/title_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
-                android:text="加载中"
+                android:layout_alignParentTop="true"
                 android:layout_marginLeft="8dp"
+                android:layout_toEndOf="@+id/icon_image"
                 android:layout_toRightOf="@+id/icon_image"
-                android:layout_toEndOf="@+id/icon_image"/>
+                android:text="加载中"/>
+
+            <TextView
+                android:id="@+id/date_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/icon_image"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="10dp"
+                android:text="date_tv"/>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
